[metadata]
name = Qualm
description = An esolang written in Python
version = 0.0.1
author = Wilfred
# license =
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/wilfreddv/qualm
platforms = any
classifiers =
    Programming Language :: Python :: 3

[options]
scripts = qualm.py
python_requires = >=3.6

[options.entry_points]
console_scripts =
    qualm = qualm:main
