[metadata]
name = qualm
description = An esolang written in Python
version = 1.3
author = Wilfred
license_files = LICENSE
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/wilfreddv/qualm
platforms = any
classifiers =
    Programming Language :: Python :: 3

[options]
scripts = qualm.py
python_requires = >= 3.8

[options.entry_points]
console_scripts =
    qualm = qualm:main
